           you should run Field_Duplicates_Test and if the duplicates are found,
           then run Field_Duplicates_Repair. Only then
           the Update_Db_Structure_Repair is finished well
         - fixed "Copy slice" feature of Central. Now uses Task Manager
           and items import is optional
         - UI of Task Manager is improved a bit
         - preventing AA session expiration for remote AAs
         - fix new database upgrade script to work with MySQL 4.0
         - old records from post2shtml table are deleted periodicaly (with log
           table cleanup)
16/12/07 - fixed syntax errors with polls tables inside sql_update.php3
(Adam)
12/12/07 - fixes in Central Synchronization - constants are synchronized well
(honzam) - better UI for Central Synchronize
         - cleanup in polls - removed unused functions and files
         - fixed probem with loosing number of votes, when poll is updated
12/10/07 - metabase now deals with indexes. Metabase is now also able to create
(honzam)   right SQL for creating whole AA database, so sql_update.php3 script
           will use it instead of SQLs placed directly into sql_update.php3
         - added new Add Polls action in AA -> Optimize which creates Polls
           tables and first Polls template for you
         - cleanup in polls
         - fixed {ids...} construct which was not working after the change
           to AA_Set 12/05/07
         - parameters described in modules/polls/poll.php3
         - fixed syntax errors in aa_optimize.php3
12/06/07 - fixed sql_update.php3 script for polls module - you can use
(honzam)   AA -> Optimize "Add Polls" action for initial table creation
!SQL!
12/05/07 - polls module finalized and working - last bugs fixed, database
(honzam)   structure of polls* tables is different. Thanks should go to Econnect
           who sponsored the initial polls implementation and to Colnodo, who
           sponsored this finalization.